@@ -1,4 +1,5 @@
 23 Aug 2018
+fix: check if var is empty before using it torrenttable_functions.php
 fix: users class not sending messages grouppm.php
 
 22 Aug 2018
